<resources>
    <string name="app_name">calculator</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_dot">.</string>
    <string name="btn_div">/</string>
    <string name="btn_mult">*</string>
    <string name="btn_subtr">-</string>
    <string name="btn_add">+</string>
    <string name="btn_result">=</string>
    <string name="btn_clear">CLEAR ALL</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_back">Back</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="rb_Theme01">Theme №1</string>
    <string name="rb_Theme02">Theme №2</string>
    <string name="rb_Theme03">Theme №3</string>
    <string name="tvSettingsMessage">Выберите тему приложения</string>
</resources>