<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSettingsMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvSettingsMessage" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_Theme01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_Theme01" />

            <RadioButton
                android:id="@+id/rb_Theme02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_Theme02" />

            <RadioButton
                android:id="@+id/rb_Theme03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_Theme03" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_back" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>